# contagion-networks

./: LICENSE  README.md  pyproject.toml
contagion_networks/: __init__.py  __main__.py  cli.py
contagion_networks/core/: __init__.py  analysis.py  contagion_matrix.py  mitigation.py  models.py  simulation.py
tests/: test_contagion.py
